--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,5 +1,4 @@
 server.port=9090
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=<< OAuth Server realm URL >>/protocol/openid-connect/certs
 logging.level.be.ordina.controller.HeroController=DEBUG
-
-logging.file = log-file-name.log
+logging.file = api-hero.log
