renamed log file.

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,4 @@
 server.port=9090
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=<< OAuth Server realm URL >>/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${resourceServerURL}/protocol/openid-connect/certs
 logging.level.be.ordina.controller.HeroController=DEBUG
-logging.file = api-hero.log
+logging.file = application.log
